--- a/Project_10/docker-compose.yml
+++ b/Project_10/docker-compose.yml
@@ -1,83 +1,33 @@
 version: "3.8"
 
 services:
-
-  frontend:
-
-    build:
-
-      context: ./ORSProject10-UI
-
+  mysql:
+    image: mysql:8.0
+    container_name: ors-mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: ors10
     ports:
-
-      - "4200:80"
-
-    depends_on:
-
-      - backend
-
-    networks:
-
-      - ors_network
+      - "3308:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      retries: 5
 
   backend:
-
-    build:
-
-      context: ./Project_10
-
-    ports:
-
-      - "8084:8084"
-
+    build: .
+    container_name: ors-backend
     depends_on:
-
-      - mysql
-
-    environment:
-
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/project10
-
-      - SPRING_DATASOURCE_USERNAME=root
-
-      - SPRING_DATASOURCE_PASSWORD=root
-
-    networks:
-
-      - ors_network
-
-  mysql:
-
-    image: mysql:8.1
-
-    container_name: mysql_p10
-
-    environment:
-
-      MYSQL_ROOT_PASSWORD: root
-
-      MYSQL_DATABASE: project10
-
+      mysql:
+        condition: service_healthy
     ports:
-
-      - "3308:3306"
-
-    volumes:
-
-      - mysql_data:/var/lib/mysql
-
-    networks:
-
-      - ors_network
+      - "8084:8084"
+    environment:
+      DB_URL: jdbc:mysql://ors-mysql:3306/ors10?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      DB_USERNAME: root
+      DB_PASSWORD: root
 
 volumes:
-
   mysql_data:
-
-networks:
-
-  ors_network:
-
-    driver: bridge
-
- 
