--- a/Project_10/docker-compose.yml
+++ b/Project_10/docker-compose.yml
@@ -1,83 +1,40 @@
-version: "3.8"
-
 services:
-
   frontend:
-
     build:
-
       context: ./ORSProject10-UI
-
     ports:
-
-      - "4200:80"
-
+    - 4200:80
     depends_on:
-
-      - backend
-
+    - backend
     networks:
-
-      - ors_network
-
+    - ors_network
   backend:
-
     build:
-
       context: ./Project_10
-
     ports:
-
-      - "8084:8084"
-
+    - 8084:8084
     depends_on:
-
-      - mysql
-
+    - mysql
     environment:
-
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/project10
-
-      - SPRING_DATASOURCE_USERNAME=root
-
-      - SPRING_DATASOURCE_PASSWORD=root
-
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/project10
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
     networks:
-
-      - ors_network
-
+    - ors_network
   mysql:
-
     image: mysql:8.1
-
     container_name: mysql_p10
-
     environment:
-
       MYSQL_ROOT_PASSWORD: root
-
       MYSQL_DATABASE: project10
-
     ports:
-
-      - "3308:3306"
-
+    - 3308:3306
     volumes:
-
-      - mysql_data:/var/lib/mysql
-
+    - mysql_data:/var/lib/mysql
     networks:
-
-      - ors_network
-
+    - ors_network
 volumes:
-
-  mysql_data:
-
+  mysql_data: null
 networks:
-
   ors_network:
-
     driver: bridge
-
- 
