--- a/Project_10/src/main/resources/application.properties
+++ b/Project_10/src/main/resources/application.properties
@@ -1,28 +1,16 @@
-# ===============================
-# SERVER CONFIG
-# ===============================
-server.port=8084
-spring.application.name=ORSP10
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+server.port = 8084
+spring.application.name = ORSP10
 
-
-# ===============================
-# JWT CONFIGURATION
-# ===============================
+#JWT CONFIGURATION
 jwt.secret=RAYS
 jwt.expiration=3600000
 
-
-# ===============================
-# PAGINATION
-# ===============================
+#pagination
 page.size=5
 
-
-# ===============================
-# DATASOURCE CONFIG (Docker Ready)
-# ===============================
+##Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-<<<<<<< HEAD
 spring.datasource.url = jdbc:mysql://localhost:3306/project10?allowPublicKeyRetrieval=true&useSSL=false
 #spring.datasource.url = jdbc:mysql://mysql:3306/project10?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
@@ -30,46 +18,34 @@ spring.datasource.password = root
 jwt.secret=RaysTech
 #To disable the default white label error page
 #server.error.whitelabel.enabled=false
-=======
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
->>>>>>> 08e3c47d29ff0b650c90c600f91eca203871355a
 
+spring.datasource.hikari.connection-timeout=10000
 
-# ===============================
-# HIKARI CONNECTION POOL
-# ===============================
-spring.datasource.hikari.connection-timeout=5000
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=1
+#Shivkant Choudhary
+## To store the session in database
+#spring.session.store-type=jdbc
+#spring.session.jdbc.initialize-schema=always
+#spring.session.timeout.seconds=900
 
-
-# ===============================
-# JPA / HIBERNATE
-# ===============================
-spring.jpa.hibernate.ddl-auto=update
+## Hibernate/JPA  Properties
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql = true
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB53Dialect
+#spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
 
-# ===============================
-# EMAIL CONFIG (ENV BASED – SAFE)
-# ===============================
+#Email properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=dummy@gmail.com
-spring.mail.password=dummy
+spring.mail.username=shivkantchoudhary5@gmail.com
+spring.mail.password=ptid ebyb evmu qqsf
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-# ===============================
-# JASPER REPORT
-# ===============================
-jasper=classpath:report/B.jrxml
-
-# Author
-# SANAT KUMAR CHOUHAN
+jasper=C:\\Users\\dell\\JaspersoftWorkspace\\MyReports\\project10shiv.jrxml
+#Author=Shivkant Choudhary
